--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aniso8601==8.0.0
-beautifulsoup4
+beautifulsoup4~=4.6.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -21,15 +21,15 @@ MarkupSafe==1.1.1
 mccabe
 mysql-connector
 nltk
-numpy
-pandas
+numpy~=1.19.5
+pandas~=1.4.2
 pandas-datareader==0.9.0
 pep8==1.7.1
 plotly==5.0.0
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
-seaborn
+seaborn~=0.11.2
 selenium==3.141.0
 six==1.15.0
 SQLAlchemy==1.3.20
@@ -40,3 +40,8 @@ urllib3==1.25.10
 Werkzeug==1.0.1
 wincertstore==0.2
 torch
+tabulate~=0.8.9
+django~=4.0.5
+scikit-learn~=1.1.1
+matplotlib~=3.5.1
+scipy~=1.7.3
