--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Jinja2==2.11.2
 JPype1
 jsonify==0.5
 jupyter==1.0.0
-konlpy==0.6.0
+konlpy~=0.5.2
 lxml
 MarkupSafe==1.1.1
 mccabe
@@ -46,3 +46,4 @@ scikit-learn~=1.1.1
 matplotlib~=3.5.1
 scipy~=1.7.3
 wordcloud~=1.8.1
+keras~=2.6.0
